cool, solved looong stucked bugggg

--- a/src/Component/admin/admin.css
+++ b/src/Component/admin/admin.css
@@ -3,7 +3,6 @@
     width: 100%;
     align-items: stretch;
     font-weight: normal;  
-     height: 80vh;
     margin-top: 0;
     left: 0;
     top: 0;
@@ -16,16 +15,14 @@
     background: #282828;
     color: #fff;
     transition: all 0.3s;
-    height: 100vh;
   }
   
-   @media (max-width: 360px) {
+   /* @media (max-width: 360px) {
     .sidebar-wrapper {
       display: flex;
       max-width: 100%;
       align-items: stretch;
       font-weight: normal;  
-       height: 100vh;
       margin-top: 0;
       left: 0;
       top: 0;
@@ -41,7 +38,7 @@
     height: 100vh;
   }
   
-} 
+}  */
   #sidebar.active {
     margin-left: -250px;
   }
